Changes for 2.1.8

New features:
A.F....... [ZBX-1357] updated Dutch, Finnish, Indonesian, Italian, Lithuanian, Persian, Portuguese (Portugal), Russian and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.1.7

New features:
..FG...... [ZBX-2008] added support of Windows Eventing 6.0 (igors, Ivo)
...G...... [ZBXNEXT-1942] added zabbix sender dynamic link library for windows (wiper)
...G...... [ZBXNEXT-935] zabbix sender exit status now better reflects the operation result - success:0, partial success:2, failure:1 (asaveljevs, wiper)
.......PS. [ZBXNEXT-935] improved readability of server response to sender/agent data (asaveljevs, wiper)
.......PS. [ZBXNEXT-1633] improved VMware virtual machine monitoring performance (wiper)
..F....... [ZBX-6911] added functionality to save positions of block on dashboard page in profiles table (Vitalij)

Bug fixes:
A.F....... [ZBX-6953] fixed Apache server crashing on Windows due to huge memory consumption when using preg_match() function in Configuration > Host > edit (Ivo)
..F....... [ZBX-7079] fixed undefined index in map configuration page for map without icon mapping (Eduard)
..F....... [ZBX-7111] fixed host importing from 1.8 to trunk (Eduard)
..F....... [ZBX-7074] fixed incorrectly parsed trigger expression in trigger wizard (Vitalij)
..F....... [ZBX-7082] fixed not being able to create dependencies between template triggers (Ivo)
A.F....... [ZBX-7053] fixed errors when deleting a script linked to action operation and fixed type-specific operation command properties not being reset when changing type (Ivo)
..F....... [ZBX-7058] fixed repeated global search with same value (Eduard)
...GI..PS. [ZBX-7061] fixed warnings produced by clang static analyzer (asaveljevs)
..F....... [ZBX-6873] fixed pagination issue after deleting an object through form (Ivo)